--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.DeviceDefault" >
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
@@ -23,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CrisesListActivity" android:label="@string/title_activity_crises_list"/>
+        <activity android:name=".CrisesListActivity" android:label="@string/title_activity_crises_list" />
         <activity android:name=".LoginActivity" android:label="@string/title_activity_login"/>
         
     </application>        
