--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="16" />
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
     <permission
         android:name="org.sigimera.app.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
