--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -60,7 +60,7 @@
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
-                <category android:name="org.sigimera.app.sigimera" />
+                <category android:name="org.sigimera.app" />
             </intent-filter>
         </receiver>
     </application>
