Implementing the Google Cloud Messaging (GCM) register/unregister part (integrated with the Sigimera REST API).

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -51,7 +51,7 @@
             android:name=".CrisisActivity"
             android:label="@string/title_activity_crisis" />
 
-        <service android:name=".controller.GCMIntentService" />
+        <service android:name=".GCMIntentService" />
         
         <receiver
             android:name="com.google.android.gcm.GCMBroadcastReceiver"
