--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,10 +44,10 @@
         <uses-library android:name="com.google.android.maps" />
 
         <activity
-            android:name=".CrisesListActivity"
+            android:name=".CrisesListFragment"
             android:label="@string/title_activity_crises_list" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".LoginFragment"
             android:label="@string/title_activity_login" />
         <activity
             android:name=".CrisisActivity"
