--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,6 +50,7 @@
             
         <activity 
             android:name=".CrisisAlertActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:label="@string/title_crisis_alert_activity"/>
 
         <service android:name=".GCMIntentService" />
