Adding (nearly) emtpy classes that are needed for the Android Account Manager logic. Getting only a short form of the crises JSON file.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,7 +52,16 @@
             android:name=".CrisisAlertActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
             android:label="@string/title_crisis_alert_activity"/>
-
+        
+        <service android:name=".backend.auth.AuthenticationService"
+           android:exported="false" >
+            <intent-filter>
+     			<action android:name="android.accounts.AccountAuthenticator" />
+   			</intent-filter>
+   			<meta-data android:name="android.accounts.AccountAuthenticator"
+            	android:resource="@xml/authenticator" />
+        </service>
+        
         <service android:name=".GCMIntentService" />
 
         <receiver
