--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,7 +31,8 @@
     <application
         android:icon="@drawable/sigimera_logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:hardwareAccelerated="true" >
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
