--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,13 +26,16 @@
     <!-- GCM requires a Google account. -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <!-- Keeps the processor from sleeping when a message is received. -->
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />   
 
     <application
         android:icon="@drawable/sigimera_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:hardwareAccelerated="true" >
+        
+        <uses-library android:name="com.google.android.maps" />
+        
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
