--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,11 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.sigimera.app.android"
+<manifest package="org.sigimera.app.android"
     android:installLocation="auto"
-    android:versionCode="5"
-    android:versionName="1.1.0-beta">
+    android:versionCode="6"
+    android:versionName="1.1.1" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="16" />
+        android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -32,6 +31,7 @@
         android:icon="@drawable/sigimera_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
+        android:allowBackup="false"
         android:hardwareAccelerated="true" >
         
         <uses-library android:name="com.google.android.maps" />
